--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "amqplib": "^0.10.5",
+    "cookie-parser": "^1.4.7",
     "mongoose": "^8.12.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
